nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: ic-ws-003
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.23.2
        imagePullPolicy: IfNotPresent
        name: nginx
        resources:
         requests:
           memory: "64Mi"
           cpu: "150m"
         limits:
           memory: "128Mi"
           cpu: "300m"
        volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-configmap
           
      securityContext: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: ic-ws-003
  annotations:
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy-haproxy
    haproxy.org/path-rewrite: "/"
  name: nginx-ingress
  namespace: ic-ws-003
spec:
  rules:
#  - host: app.local
   - http:
      paths:
      - path: /demo
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
